--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         </header>
         <div class="line"></div>
         <div class="nav2 d-flex text-center justify-content-center p-2">
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Offers & Recommendations</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="#Services">Services</a></li>
+            <li><a href="#offers">Offers & Recommendations</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#about">About Us</a></li>
         </div>
     </nav>
 
     <main class="d-flex align-items-center justify-content-center flex-column">
-        <div class="title w-100">
+        <div class="title">
             <div class="intro mb-5">
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -69,8 +69,8 @@
 </div>
 
     <div class="container">
-        <div class="offers d-flex flex-column align-items-center justify-content-center m-5">
-            <h1>Our offers</h1>
+        <div class="offers d-flex flex-column align-items-center justify-content-center m-5" id="Services">
+            <h1>Our Services</h1>
             <div class="offers_ d-flex justify-content-center">
                 <div class="offers__ d-flex flex-column justify-content-center align-items-center text-center m-4 gap-2">
                     <i class='bx bx-swim d-flex'></i>
@@ -92,7 +92,7 @@
     </div>
 
     <div class="container">
-            <div class="recom m-5 d-flex flex-column justify-content-center align-items-center">
+            <div class="recom m-5 d-flex flex-column justify-content-center align-items-center" id="offers">
                 <div class="explo">Explore Isabela</div>
                 <h1>Recommendations</h1>
                 <div class="recom_-- d-flex">
@@ -171,7 +171,7 @@
     </div>
 
     <div class="container">
-        <div class="blog d-flex m-5">
+        <div class="blog d-flex m-5" id="blog">
             <div class="blog-img w-50">
                 <img src="/Img/last regnant.jpg" alt="" width="400">
             </div>
@@ -200,7 +200,7 @@
     </div>
 
     <div class="container">
-        <div class="about-us d-flex flex-column m-5 align-items-center justify-content-center">
+        <div class="about-us d-flex flex-column m-5 align-items-center justify-content-center" id="about">
             <div class="about_ m-5"> <h1>about us</h1></div>
 
             <div class="about_p text-center">Isabelaco is an online travel platform that brings high-value and rewarding travel experiences to people all over the isabela through the isabelaco website. Our mission is to empower everyone to be a traveler by offering affordable deals on hotels, Private villas, activities, and more, with an isabelaco booking experience that is hassle-free from start to finish.
@@ -213,7 +213,7 @@
     <div class="container">
         <div class="with_us m-5 d-flex justify-content-center">
             <div class="with_">
-                <div class="with__">Why book<br> with us?</div>
+                <div class="with__">What we offer.</div>
                 <div class="bg-g m-4">
                     <div class="with_t">24/7 Customer Care.</div>
                     <div class="with-img d-flex justify-content-center align-items-center mt-4">
@@ -250,7 +250,7 @@
             <div class="foot_1 m-5">
                 <div class="logoname">Isabela<span>co.</span></div>
             </div>
-            <div class="foot_2 m-5">
+            <div class="foot_2">
                 <h4>Help</h4>
                 <li>Help center</li>
                 <li>FAQs</li>
@@ -259,7 +259,7 @@
                 <li>Terms of use</li>
                 <li>Manage cookie settings</li>
             </div>
-            <div class="foot_2 m-5">
+            <div class="foot_2">
                 <h4>Company</h4>
                     <li>About us</li>
                     <li>Careers</li>
@@ -267,11 +267,11 @@
                     <li>Blog</li>
                     <li>PointsMAX</li>
             </div>
-            <div class="foot_2 m-5">
+            <div class="foot_2">
                 <h4>Destinations</h4>
                     <li>Cities</li>
             </div>
-            <div class="foot_2 m-5">
+            <div class="foot_2">
                 <h4>Partner with us</h4>
                     <li>YCS partner portal</li>
                     <li>Partner Hub</li>
