--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -117,11 +118,11 @@
     </div>
 
     <div class="container">
-            <div class="recom m-5 d-flex flex-column justify-content-center align-items-center" id="offers">
+            <div class="recom  d-flex flex-column justify-content-center align-items-center" id="offers">
                 <div class="explo">Explore Isabela</div>
                 <h1>Recommendations</h1>
                 <div class="recom_-- d-flex">
-                <div class="recom_ m-2">
+                <div class="recom_ m-3">
                     <div class="fade_"></div>
                     <div class="recom_- d-flex flex-column-reverse align-self-sm-baseline text-start">
                         <div class="overlay"></div>
@@ -140,7 +141,7 @@
                     <span>Sta.Cruz, San Manuel, Isabela</span>  
                     </div>
                 </div>
-                <div class="recom_ m-2">
+                <div class="recom_ m-3">
                     <div class="fade_"></div>
                     <div class="recom_1 d-flex flex-column-reverse align-self-sm-baseline text-start">
                         <div class="overlay"></div>
@@ -159,28 +160,34 @@
                         <span>Quezon St, Cauayan City, Isabela</span>  
                     </div>
                 </div>
-                <div class="recom_ m-2">
-                    <div class="fade_"></div>
-                    <div class="recom_2 d-flex flex-column-reverse align-self-sm-baseline text-start">
-                        <div class="overlay"></div>
-                        <div class="recom-hide">Feel the relaxing ambiance and our crystal clear water swimming pool.</div>
-                        <div class="recom-icon d-flex mb-3 z-3 text-white text-center gap-1">
-                            (5.0) 
-                            <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
-                            <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
-                            <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
-                            <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
-                            <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
-                              PHP 1,999
+            </div>
+            </div>
+            <div class="last d-flex align-items-center justify-content-center" >
+                <div class="last_1 mx-5">
+                    <div class="recom_ m-3">
+                        <div class="fade_"></div>
+                        <div class="recom_2 d-flex flex-column-reverse align-self-sm-baseline text-start">
+                            <div class="overlay"></div>
+                            <div class="recom-hide">Feel the relaxing ambiance and our crystal clear water swimming pool.</div>
+                            <div class="recom-icon d-flex mb-3 z-3 text-white text-center gap-1">
+                                (5.0) 
+                                <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
+                                <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
+                                <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
+                                <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
+                                <i class='bx bxs-star' style="color: #00ca6c; z-index: 99; font-size: 20px;"></i>
+                                  PHP 1,999
+                            </div>
+                            <h2>JD's Farm and Resort</h2>
+                        <span>Cabisera 18, San Antonio, Ilagan, Isabela</span>  
                         </div>
-                        <h2>JD's Farm and Resort</h2>
-                    <span>Cabisera 18, San Antonio, Ilagan, Isabela</span>  
                     </div>
                 </div>
             </div>
             </div>
 
     </div>
+
 
     <div class="container">
             <div class="Book d-flex justify-content-center align-items-center text-center m-5">
